[gd_scene load_steps=6 format=3 uid="uid://dohpbe784h00c"]

[ext_resource type="Script" path="res://scripts/hud/battle_hud.gd" id="1_rmcuf"]
[ext_resource type="Script" path="res://scripts/hud/player_party_hud.gd" id="2_1bpi8"]
[ext_resource type="Texture2D" uid="uid://btyn2pcr5eeou" path="res://assets/hud/BG_battleCommands.png" id="2_4mled"]
[ext_resource type="Texture2D" uid="uid://dpt18gwh1cgfa" path="res://assets/characters/troupeChar1.png" id="3_bjwje"]
[ext_resource type="PackedScene" uid="uid://du2nrgtvwt25y" path="res://scenes/hud/char_block.tscn" id="3_i8x3h"]

[node name="BattleHud" type="CanvasLayer"]
script = ExtResource("1_rmcuf")

[node name="BattleCommandsHolder" type="Control" parent="."]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="BG" type="TextureRect" parent="BattleCommandsHolder"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -540.0
offset_right = 1980.0
offset_bottom = 540.0
grow_vertical = 2
texture = ExtResource("2_4mled")

[node name="ExchangeButton" type="Button" parent="BattleCommandsHolder"]
layout_mode = 0
offset_left = 20.0
offset_top = 200.0
offset_right = 220.0
offset_bottom = 235.0
text = "Exchange"

[node name="FightButton" type="Button" parent="BattleCommandsHolder"]
layout_mode = 0
offset_left = 20.0
offset_top = 300.0
offset_right = 220.0
offset_bottom = 335.0
text = "Fight"

[node name="DefendButton" type="Button" parent="BattleCommandsHolder"]
layout_mode = 0
offset_left = 20.0
offset_top = 340.0
offset_right = 220.0
offset_bottom = 375.0
text = "Defend"

[node name="PlayerParty" type="Control" parent="."]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("2_1bpi8")
redCharTexture = ExtResource("3_bjwje")
greenCharTexture = ExtResource("3_bjwje")
blueCharTexture = ExtResource("3_bjwje")
yellowCharTexture = ExtResource("3_bjwje")

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerParty"]
layout_mode = 0
offset_left = 300.0
offset_top = -220.0
offset_right = 1680.0
offset_bottom = -20.0
alignment = 1

[node name="redChar" parent="PlayerParty/HBoxContainer" instance=ExtResource("3_i8x3h")]
layout_mode = 2

[node name="greenChar" parent="PlayerParty/HBoxContainer" instance=ExtResource("3_i8x3h")]
layout_mode = 2

[node name="blueChar" parent="PlayerParty/HBoxContainer" instance=ExtResource("3_i8x3h")]
layout_mode = 2

[node name="yellowChar" parent="PlayerParty/HBoxContainer" instance=ExtResource("3_i8x3h")]
layout_mode = 2

[connection signal="pressed" from="BattleCommandsHolder/ExchangeButton" to="." method="_on_exchange_button_pressed"]
[connection signal="pressed" from="BattleCommandsHolder/FightButton" to="." method="_on_fight_button_pressed"]
[connection signal="pressed" from="BattleCommandsHolder/DefendButton" to="." method="_on_defend_button_pressed"]
[connection signal="focused_in" from="PlayerParty/HBoxContainer/redChar" to="." method="_on_red_char_focused_in"]
[connection signal="focused_in" from="PlayerParty/HBoxContainer/greenChar" to="." method="_on_green_char_focused_in"]
[connection signal="focused_in" from="PlayerParty/HBoxContainer/blueChar" to="." method="_on_blue_char_focused_in"]
[connection signal="focused_in" from="PlayerParty/HBoxContainer/yellowChar" to="." method="_on_yellow_char_focused_in"]
